Outliner / Data API: Showing custom mesh attributes while in Edit Mode crashes blender #95922

Closed
opened 2022-02-21 07:23:32 +01:00 by Daniel · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: dc2d180181
Worked: unkown / never(?)

Short description of error
If some attributes are present on a mesh (occured with String data for edges at least) blender crashes if this data is viewed in the Data API outliner view while also being in Edit mode / chaging to edit mode

Exact steps for others to reproduce the error
Add custom mesh attributes, navigate to these in the Data API outliner view and switch into Edit mode in the 3D view.

blender_crash_data_api.png
data_api_crash_example.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: `dc2d180181` Worked: unkown / never(?) **Short description of error** If some attributes are present on a mesh (occured with String data for edges at least) blender crashes if this data is viewed in the Data API outliner view while also being in Edit mode / chaging to edit mode **Exact steps for others to reproduce the error** Add custom mesh attributes, navigate to these in the Data API outliner view and switch into Edit mode in the 3D view. ![blender_crash_data_api.png](https://archive.blender.org/developer/F12879945/blender_crash_data_api.png) [data_api_crash_example.blend](https://archive.blender.org/developer/F12879940/data_api_crash_example.blend)
Author

Added subscriber: @bestdani

Added subscriber: @bestdani
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I hit the following assert in latest master.

  * frame #0: 0x00007ffff7e0cd22 libc.so.6`raise + 322
    frame #1: 0x00007ffff7df6862 libc.so.6`abort + 278
    frame #2: 0x000000000eec2929 blender`_BLI_assert_abort at BLI_assert.c:46:3
    frame #3: 0x0000000004d41c40 blender`blender::ed::outliner::outliner_add_element(space_outliner=0x00007fffca99a688, lb=0x00007fffcd6fa1c8, idv=0x00007fffffffdc90, parent=0x00007fffcd6fa1a8, type=30, index=0) at outliner_tree.cc:848:5
    frame #4: 0x0000000004d5f3a1 blender`blender::ed::outliner::TreeElementRNAProperty::expand(this=0x00007fffeb287510, space_outliner=0x00007fffca99a688) const at tree_element_rna.cc:187:9
    frame #5: 0x0000000004d53349 blender`blender::ed::outliner::tree_element_expand(tree_element=0x00007fffeb287510, space_outliner=0x00007fffca99a688) at tree_element.cc:109:16
    frame #6: 0x0000000004d41f88 blender`blender::ed::outliner::outliner_add_element(space_outliner=0x00007fffca99a688, lb=0x00007fffcd6f9da8, idv=0x00007fffffffde00, parent=0x00007fffcd6f9d88, type=31, index=4) at outliner_tree.cc:893:5
    frame #7: 0x0000000004d5ef84 blender`blender::ed::outliner::TreeElementRNAStruct::expand(this=0x00007fffeb288b00, space_outliner=0x00007fffca99a688) const at tree_element_rna.cc:121:9
    frame #8: 0x0000000004d53349 blender`blender::ed::outliner::tree_element_expand(tree_element=0x00007fffeb288b00, space_outliner=0x00007fffca99a688) at tree_element.cc:109:16
    frame #9: 0x0000000004d41f88 blender`blender::ed::outliner::outliner_add_element(space_outliner=0x00007fffca99a688, lb=0x00007fffda06f568, idv=0x00007fffffffdf20, parent=0x00007fffda06f548, type=30, index=0) at outliner_tree.cc:893:5
    frame #10: 0x0000000004d5f3a1 blender`blender::ed::outliner::TreeElementRNAProperty::expand(this=0x00007fffd972a100, space_outliner=0x00007fffca99a688) const at tree_element_rna.cc:187:9
    frame #11: 0x0000000004d53349 blender`blender::ed::outliner::tree_element_expand(tree_element=0x00007fffd972a100, space_outliner=0x00007fffca99a688) at tree_element.cc:109:16
    frame #12: 0x0000000004d41f88 blender`blender::ed::outliner::outliner_add_element(space_outliner=0x00007fffca99a688, lb=0x00007fffcd6f96e8, idv=0x00007fffffffe090, parent=0x00007fffcd6f96c8, type=31, index=42) at outliner_tree.cc:893:5
    frame #13: 0x0000000004d5ef84 blender`blender::ed::outliner::TreeElementRNAStruct::expand(this=0x00007fffeb2887d0, space_outliner=0x00007fffca99a688) const at tree_element_rna.cc:121:9
    frame #14: 0x0000000004d53349 blender`blender::ed::outliner::tree_element_expand(tree_element=0x00007fffeb2887d0, space_outliner=0x00007fffca99a688) at tree_element.cc:109:16
    frame #15: 0x0000000004d41f88 blender`blender::ed::outliner::outliner_add_element(space_outliner=0x00007fffca99a688, lb=0x00007fffcd6f9748, idv=0x00007fffffffe1b0, parent=0x00007fffcd6f9728, type=30, index=0) at outliner_tree.cc:893:5
    frame #16: 0x0000000004d5f3a1 blender`blender::ed::outliner::TreeElementRNAProperty::expand(this=0x00007fffeb288800, space_outliner=0x00007fffca99a688) const at tree_element_rna.cc:187:9
    frame #17: 0x0000000004d53349 blender`blender::ed::outliner::tree_element_expand(tree_element=0x00007fffeb288800, space_outliner=0x00007fffca99a688) at tree_element.cc:109:16
    frame #18: 0x0000000004d41f88 blender`blender::ed::outliner::outliner_add_element(space_outliner=0x00007fffca99a688, lb=0x00007fffda06f508, idv=0x00007fffffffe320, parent=0x00007fffda06f4e8, type=31, index=11) at outliner_tree.cc:893:5
    frame #19: 0x0000000004d5ef84 blender`blender::ed::outliner::TreeElementRNAStruct::expand(this=0x00007fffd972a2e0, space_outliner=0x00007fffca99a688) const at tree_element_rna.cc:121:9
    frame #20: 0x0000000004d53349 blender`blender::ed::outliner::tree_element_expand(tree_element=0x00007fffd972a2e0, space_outliner=0x00007fffca99a688) at tree_element.cc:109:16
    frame #21: 0x0000000004d41f88 blender`blender::ed::outliner::outliner_add_element(space_outliner=0x00007fffca99a688, lb=0x00007fffffffe468, idv=0x00007fffffffe450, parent=0x0000000000000000, type=30, index=-1) at outliner_tree.cc:893:5
    frame #22: 0x0000000004d4c06d blender`blender::ed::outliner::TreeDisplayDataAPI::buildTree(this=0x00007fffeb2d4160, source_data=0x00007fffffffe4c8) at tree_display_data.cc:32:21
    frame #23: 0x0000000004d4342d blender`::outliner_build_tree(mainvar=0x00007fffcabfbd08, scene=0x00007fffca9d6008, view_layer=0x00007fffca9ca1c8, space_outliner=0x00007fffca99a688, region=0x00007fffca9a93c8) at outliner_tree.cc:1690:65
    frame #24: 0x0000000004d2a933 blender`::draw_outliner(C=0x00007ffff39485c8) at outliner_draw.cc:3829:3
    frame #25: 0x0000000004d47fff blender`outliner_main_region_draw(C=0x00007ffff39485c8, region=0x00007fffca9a93c8) at space_outliner.cc:86:3
    frame #26: 0x000000000410d314 blender`ED_region_do_draw(C=0x00007ffff39485c8, region=0x00007fffca9a93c8) at area.c:542:5
    frame #27: 0x0000000003647e69 blender`wm_draw_window_offscreen(C=0x00007ffff39485c8, win=0x00007fffca97db88, stereo=false) at wm_draw.c:715:9
    frame #28: 0x0000000003646ed7 blender`wm_draw_window(C=0x00007ffff39485c8, win=0x00007fffca97db88) at wm_draw.c:865:3
    frame #29: 0x000000000368a600 blender`wm_window_make_drawable(wm=0x00007ffff39485c8, win=0x00007fffca97db88) at wm_window.c:1023:5
    frame #30: 0x0000000003646bdd blender`wm_draw_update(C=0x00007ffff39485c8) at wm_draw.c:1066:7
    frame #31: 0x0000000003643b59 blender`WM_main(C=0x00007ffff39485c8) at wm.c:629:5
    frame #32: 0x0000000002e07a34 blender`main(argc=1, argv=0x00007fffffffe9e8) at creator.c:544:5
    frame #33: 0x00007ffff7df7b25 libc.so.6`__libc_start_main + 213
    frame #34: 0x0000000002e075fe blender`_start + 46

BLI_assert failed: source/blender/editors/space_outliner/outliner_tree.cc:864, outliner_add_element(), at 'te->name != nullptr'
I hit the following assert in latest master. ``` * frame #0: 0x00007ffff7e0cd22 libc.so.6`raise + 322 frame #1: 0x00007ffff7df6862 libc.so.6`abort + 278 frame #2: 0x000000000eec2929 blender`_BLI_assert_abort at BLI_assert.c:46:3 frame #3: 0x0000000004d41c40 blender`blender::ed::outliner::outliner_add_element(space_outliner=0x00007fffca99a688, lb=0x00007fffcd6fa1c8, idv=0x00007fffffffdc90, parent=0x00007fffcd6fa1a8, type=30, index=0) at outliner_tree.cc:848:5 frame #4: 0x0000000004d5f3a1 blender`blender::ed::outliner::TreeElementRNAProperty::expand(this=0x00007fffeb287510, space_outliner=0x00007fffca99a688) const at tree_element_rna.cc:187:9 frame #5: 0x0000000004d53349 blender`blender::ed::outliner::tree_element_expand(tree_element=0x00007fffeb287510, space_outliner=0x00007fffca99a688) at tree_element.cc:109:16 frame #6: 0x0000000004d41f88 blender`blender::ed::outliner::outliner_add_element(space_outliner=0x00007fffca99a688, lb=0x00007fffcd6f9da8, idv=0x00007fffffffde00, parent=0x00007fffcd6f9d88, type=31, index=4) at outliner_tree.cc:893:5 frame #7: 0x0000000004d5ef84 blender`blender::ed::outliner::TreeElementRNAStruct::expand(this=0x00007fffeb288b00, space_outliner=0x00007fffca99a688) const at tree_element_rna.cc:121:9 frame #8: 0x0000000004d53349 blender`blender::ed::outliner::tree_element_expand(tree_element=0x00007fffeb288b00, space_outliner=0x00007fffca99a688) at tree_element.cc:109:16 frame #9: 0x0000000004d41f88 blender`blender::ed::outliner::outliner_add_element(space_outliner=0x00007fffca99a688, lb=0x00007fffda06f568, idv=0x00007fffffffdf20, parent=0x00007fffda06f548, type=30, index=0) at outliner_tree.cc:893:5 frame #10: 0x0000000004d5f3a1 blender`blender::ed::outliner::TreeElementRNAProperty::expand(this=0x00007fffd972a100, space_outliner=0x00007fffca99a688) const at tree_element_rna.cc:187:9 frame #11: 0x0000000004d53349 blender`blender::ed::outliner::tree_element_expand(tree_element=0x00007fffd972a100, space_outliner=0x00007fffca99a688) at tree_element.cc:109:16 frame #12: 0x0000000004d41f88 blender`blender::ed::outliner::outliner_add_element(space_outliner=0x00007fffca99a688, lb=0x00007fffcd6f96e8, idv=0x00007fffffffe090, parent=0x00007fffcd6f96c8, type=31, index=42) at outliner_tree.cc:893:5 frame #13: 0x0000000004d5ef84 blender`blender::ed::outliner::TreeElementRNAStruct::expand(this=0x00007fffeb2887d0, space_outliner=0x00007fffca99a688) const at tree_element_rna.cc:121:9 frame #14: 0x0000000004d53349 blender`blender::ed::outliner::tree_element_expand(tree_element=0x00007fffeb2887d0, space_outliner=0x00007fffca99a688) at tree_element.cc:109:16 frame #15: 0x0000000004d41f88 blender`blender::ed::outliner::outliner_add_element(space_outliner=0x00007fffca99a688, lb=0x00007fffcd6f9748, idv=0x00007fffffffe1b0, parent=0x00007fffcd6f9728, type=30, index=0) at outliner_tree.cc:893:5 frame #16: 0x0000000004d5f3a1 blender`blender::ed::outliner::TreeElementRNAProperty::expand(this=0x00007fffeb288800, space_outliner=0x00007fffca99a688) const at tree_element_rna.cc:187:9 frame #17: 0x0000000004d53349 blender`blender::ed::outliner::tree_element_expand(tree_element=0x00007fffeb288800, space_outliner=0x00007fffca99a688) at tree_element.cc:109:16 frame #18: 0x0000000004d41f88 blender`blender::ed::outliner::outliner_add_element(space_outliner=0x00007fffca99a688, lb=0x00007fffda06f508, idv=0x00007fffffffe320, parent=0x00007fffda06f4e8, type=31, index=11) at outliner_tree.cc:893:5 frame #19: 0x0000000004d5ef84 blender`blender::ed::outliner::TreeElementRNAStruct::expand(this=0x00007fffd972a2e0, space_outliner=0x00007fffca99a688) const at tree_element_rna.cc:121:9 frame #20: 0x0000000004d53349 blender`blender::ed::outliner::tree_element_expand(tree_element=0x00007fffd972a2e0, space_outliner=0x00007fffca99a688) at tree_element.cc:109:16 frame #21: 0x0000000004d41f88 blender`blender::ed::outliner::outliner_add_element(space_outliner=0x00007fffca99a688, lb=0x00007fffffffe468, idv=0x00007fffffffe450, parent=0x0000000000000000, type=30, index=-1) at outliner_tree.cc:893:5 frame #22: 0x0000000004d4c06d blender`blender::ed::outliner::TreeDisplayDataAPI::buildTree(this=0x00007fffeb2d4160, source_data=0x00007fffffffe4c8) at tree_display_data.cc:32:21 frame #23: 0x0000000004d4342d blender`::outliner_build_tree(mainvar=0x00007fffcabfbd08, scene=0x00007fffca9d6008, view_layer=0x00007fffca9ca1c8, space_outliner=0x00007fffca99a688, region=0x00007fffca9a93c8) at outliner_tree.cc:1690:65 frame #24: 0x0000000004d2a933 blender`::draw_outliner(C=0x00007ffff39485c8) at outliner_draw.cc:3829:3 frame #25: 0x0000000004d47fff blender`outliner_main_region_draw(C=0x00007ffff39485c8, region=0x00007fffca9a93c8) at space_outliner.cc:86:3 frame #26: 0x000000000410d314 blender`ED_region_do_draw(C=0x00007ffff39485c8, region=0x00007fffca9a93c8) at area.c:542:5 frame #27: 0x0000000003647e69 blender`wm_draw_window_offscreen(C=0x00007ffff39485c8, win=0x00007fffca97db88, stereo=false) at wm_draw.c:715:9 frame #28: 0x0000000003646ed7 blender`wm_draw_window(C=0x00007ffff39485c8, win=0x00007fffca97db88) at wm_draw.c:865:3 frame #29: 0x000000000368a600 blender`wm_window_make_drawable(wm=0x00007ffff39485c8, win=0x00007fffca97db88) at wm_window.c:1023:5 frame #30: 0x0000000003646bdd blender`wm_draw_update(C=0x00007ffff39485c8) at wm_draw.c:1066:7 frame #31: 0x0000000003643b59 blender`WM_main(C=0x00007ffff39485c8) at wm.c:629:5 frame #32: 0x0000000002e07a34 blender`main(argc=1, argv=0x00007fffffffe9e8) at creator.c:544:5 frame #33: 0x00007ffff7df7b25 libc.so.6`__libc_start_main + 213 frame #34: 0x0000000002e075fe blender`_start + 46 BLI_assert failed: source/blender/editors/space_outliner/outliner_tree.cc:864, outliner_add_element(), at 'te->name != nullptr' ```
Member

Added subscribers: @brecht, @lichtwerk

Added subscribers: @brecht, @lichtwerk
Philipp Oeser self-assigned this 2022-04-21 11:22:30 +02:00
Member

note: attribute layers being empty in editmode is kind of expected (see comment below), but of course, should not crash

In D11998#309317, @brecht wrote:
A consequence of this is that attribute.data will be empty when in edit mode, since custom data is stored per element instead of a single array there. UV maps behave the same so that seems fine.

Data for UVs, vertexcolors etc. is also empty in editmode, but at least these seem to properly set the collection size to zero when entering editmode.
Will check on this.

note: attribute layers being empty in editmode is kind of expected (see comment below), but of course, should not crash > In [D11998](https://archive.blender.org/developer/D11998)#309317, @brecht wrote: > A consequence of this is that `attribute.data` will be empty when in edit mode, since custom data is stored per element instead of a single array there. UV maps behave the same so that seems fine. Data for UVs, vertexcolors etc. is also empty in editmode, but at least these seem to properly set the collection size to zero when entering editmode. Will check on this.

This issue was referenced by 5179b8236b

This issue was referenced by 5179b8236ba84e50d26485a17df6b17d8e581477
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95922
No description provided.